@@ -1,11 +1,8 @@
 package encryptdecrypt;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.PrintWriter;
+import java.io.*;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Scanner;
 
@@ -13,20 +10,20 @@ import java.util.Scanner;
  * Two algorithms for encryption/decryption:
  * <p>
  * -- Shift: shifts each letter by the specified key according to its order in the alphabet in circle.
- * -- Unicode: shift every character by the specified key.
+ * -- Unicode: shifts every character by the specified key.
  * <p>
- * The program works from the command line, and it has the following options:
- * 1- -alg <algorithm_name> ==> "shift" or "unicode" --> default is "shift".
- * 2- -key <key_value>                               --> default is 0.
- * 3- -mode <mode> ==> "enc" or "dec"                --> default is "enc".
- * 4- -data <text_to_be_encrypted/decrypted>         --> default is empty string.
- * 5- -in <file_name> ==> get the data to be encrypted/decrypted from "file_name".
- * 6- -out <file_name> ==> write the cipher text to "file_name".
+ * This is a command-line program, and it has the following options:
+ * 1) -alg <algorithm_name> ==> "shift" or "unicode" --> default is "shift".
+ * 2) -key <key_value>                               --> default is 0.
+ * 3) -mode <mode> ==> "enc" or "dec"                --> default is "enc".
+ * 4) -data <text_to_be_encrypted/decrypted>         --> default is empty string.
+ * 5) -in <file_name> ==> get the data to be encrypted/decrypted from "file_name".
+ * 6) -out <file_name> ==> write the resulted text to "file_name".
  * <p>
- * # -data overrides -in.
- * # If -out was not specified, print the cipher text to the standard output.
+ * # -data option overrides -in.
+ * # If -out was not specified, the cipher text is printed out to the standard output.
  * <p>
- * The Strategy Design Pattern is used.
+ * Strategy Design Pattern is used.
  */
 public class Main {
 
@@ -38,11 +35,11 @@ public class Main {
          * */
         encDecManager.setAlgorithm(new Shift());
         encDecManager.setKey(0);
-        encDecManager.setMode("enc");
+        encDecManager.setMode(EncDecAlgorithm.MODE_ENCRYPTION);
         encDecManager.setInputText("");
 
         // Check if -data option is specified. If so, store it, otherwise keep the default value.
-        for (int i = 0; i < args.length; i++) {
+        for (int i = 0; i < args.length; i += 2) {
             if (args[i].equals("-data")) {
                 encDecManager.setInputText(args[i + 1]);
                 break;
@@ -50,24 +47,25 @@ public class Main {
         }
 
         // If -out option specified, store the file name to write the cipher text to.
-        String fileToStoreData = "";
+        String outputFileName = "";
 
         // Each argument inserted is followed by its value.
-        // i += 2 --> iterate on arguments only, not values.
+        // i += 2 --> iterate on options only, not parameters/values.
         for (int i = 0; i < args.length; i += 2) {
             switch (args[i]) {
                 case "-alg":
-                    if (args[i + 1].equalsIgnoreCase("shift")) {
+                    final String algorithm = args[i + 1];
+                    if (algorithm.equalsIgnoreCase(Shift.ALGORITHM_NAME)) {
                         encDecManager.setAlgorithm(new Shift());
-                    } else if (args[i + 1].equalsIgnoreCase("unicode")) {
+                    } else if (args[i + 1].equalsIgnoreCase(Unicode.ALGORITHM_NAME)) {
                         encDecManager.setAlgorithm(new Unicode());
                     } else {
-                        System.out.println("EncDecAlgorithm Unknown!");
+                        throw new IllegalArgumentException("Encryption/Decryption algorithm Unknown: " + algorithm);
                     }
                     break;
 
                 case "-mode":
-                    encDecManager.setMode(args[i + 1]);
+                    encDecManager.setMode(parseMode(args[i + 1]));
                     break;
 
                 case "-key":
@@ -75,20 +73,18 @@ public class Main {
                     break;
 
                 case "-in":
-                    /* Ignore the -in option if the user has entered the text after -data option, otherwise read data
-                     * from the specified file location after -in option. */
+                    /* -data option overrides -in, so check first if the user has already specified -data option. */
                     if (encDecManager.getInputText().isEmpty()) {
-                        String fileToGetData = args[i + 1];
+                        // The file contains the text for encryption/decryption.
+                        String dataFileName = args[i + 1];
 
-                        File file = new File(fileToGetData);
-
+                        File file = new File(dataFileName);
                         try (Scanner sc = new Scanner(file)) {
-                            // Read all the text in the file as a single string.
                             if (sc.hasNextLine()) {
-                                encDecManager.setInputText(readFileAsString(fileToGetData));
+                                encDecManager.setInputText(readFileAsString(dataFileName));
                             }
                         } catch (FileNotFoundException e) {
-                            System.out.printf("Error. File Not Found %s.\n", file.getPath());
+                            System.out.println("File Not Found: " + file.getPath());
                         } catch (IOException e) {
                             System.out.println("Exception occurred! " + Arrays.toString(e.getStackTrace()));
                         }
@@ -98,7 +94,7 @@ public class Main {
                 /* If -out option is specified, store the file name to write the resulted text to. Otherwise,
                  print it on the standard output. */
                 case "-out":
-                    fileToStoreData = args[i + 1];
+                    outputFileName = args[i + 1];
                     break;
             }
         }
@@ -107,22 +103,47 @@ public class Main {
         String resultedText = encDecManager.execute();
 
         /* If -out is not specified, print the data to the standard output. Otherwise, store it in a file. */
-        if (fileToStoreData.isEmpty()) {
+        if (outputFileName.isEmpty()) {
             System.out.println(resultedText);
         } else {
-            File file = new File(fileToStoreData);
+            File file = new File(outputFileName);
 
-            try (PrintWriter writer = new PrintWriter(file)) {
-                writer.print(resultedText);
+            try (Writer writer = new FileWriter(file)) {
+                writer.write(resultedText);
             } catch (FileNotFoundException e) {
-                System.out.printf("Error. File Not Found %s.\n", file.getPath());
+                System.out.println("File Not Found: " + file.getPath());
+            } catch (IOException e) {
+                System.out.println("IOException" + e.getMessage());
             }
         }
-
     }
 
+    /**
+     * Parses the given string to a pre-defined constant string mode.
+     *
+     * @param mode the mode to be parsed.
+     * @return the string mode that was pre-defined otherwise throws an exception.
+     */
+    private static String parseMode(String mode) {
+        switch (mode) {
+            case "enc":
+                return EncDecAlgorithm.MODE_ENCRYPTION;
+
+            case "dec":
+                return EncDecAlgorithm.MODE_DECRYPTION;
+
+            default:
+                throw new IllegalArgumentException("Unexpected mode " + mode);
+        }
+    }
+
+    /**
+     * Read the file given its name and returns the result as a single string.
+     *
+     * @param fileName the name of the file to be read.
+     * @return the string contains the file's contents.
+     */
     private static String readFileAsString(String fileName) throws IOException {
-        return new String(Files.readAllBytes(Paths.get(fileName)));
+        return new String(Files.readAllBytes(Path.of(fileName)));
     }
-
 }
